Add event handler

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div id="meal">
-        <h2>{{ meal }}</h2>
+        <h2 v-on:click="sayHi">{{ meal }}</h2>
         <p>{{ meat }}</p>
         <p>{{ vegetable }}</p>
         <p>{{ starch }}</p>
