Show and hide with v-show and v-on

--- a/index.html
+++ b/index.html
@@ -10,10 +10,12 @@
 </head>
 <body>
     <div id="meal">
-        <h2 v-on:click="sayHi">{{ meal }}</h2>
-        <p>{{ meat }}</p>
-        <p>{{ vegetable }}</p>
-        <p>{{ starch }}</p>
+        <h2 v-on:click="toggleIngredients">{{ meal }}</h2>
+        <div id="mealIngredients" v-show="showIngredients">
+            <p>{{ meat }}</p>
+            <p>{{ vegetable }}</p>
+            <p>{{ starch }}</p>
+        </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/vue@2.5.22/dist/vue.js"></script>
     <script src="app.js"></script>
